fix: pixel perfect alignment

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -52,7 +52,7 @@
 
 .about-project__time-bar-spent {
   margin: 0;
-  padding: 9px 0 9px 14px;
+  padding: 10px 0 10px 14px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
@@ -141,7 +141,6 @@
     margin-top: 62px;
   }
   .about-project__time-bar-spent {
-    padding: 11px 0;
     font-weight: 400;
     font-size: 11px;
     line-height: 1.21;
