--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,8 +10,7 @@
   box-sizing: border-box;
   max-width: 1280px;
   margin: 0 auto;
-  padding-right: 70px;
-  padding-left: 70px;
+  padding: 0 70px;
 }
 
 .list-group {
@@ -22,14 +21,12 @@
 
 @media screen and (max-width: 1279px) {
   .section-content {
-    padding-right: 30px;
-    padding-left: 30px;
+    padding: 0 30px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .section-content {
-    padding-right: 14px;
-    padding-left: 14px;
+    padding: 0 14px;
   }
 }
