--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,6 +1,5 @@
 .promo {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding: 75px 0;
   background-color: #073042;
 }
 
@@ -57,7 +56,7 @@
 
 @media screen and (max-width: 1279px) {
   .promo {
-    padding-top: 140px;
+    padding: 140px 0 75px;
   }
   .promo__content {
     flex-direction: column-reverse;
@@ -87,8 +86,7 @@
 
 @media screen and (max-width: 767px) {
   .promo {
-    padding-top: 70px;
-    padding-bottom: 30px;
+    padding: 70px 0 30px;
   }
   .promo__title {
     margin-top: 45px;
@@ -97,7 +95,7 @@
     letter-spacing: -0.04em;
   }
   .promo__info {
-    margin-top: 25px;
+    margin-top: 26px;
   }
   .promo__link {
     margin-top: 80px;
